--- a/reports/app.html
+++ b/reports/app.html
@@ -6,22 +6,27 @@
 <body ng-app="pdiffy">
 
 <div ng-controller="ReportCtrl" style="max-width: 900px; margin: auto">
-  <h3>{{failedSpecs.length}} of {{specsCount}} specs failed</h3>
-  <div ng-repeat="spec in failedSpecs">
+  <h3>Showing {{getSpecs().length}} of {{specsCount}} specs</h3>
+
+  <div>
+    <label><input type="checkbox" ng-model="failedOnly"> Failed specs only</label>
+  </div>
+
+  <div ng-repeat="spec in getSpecs()" style="margin-top: 20px; padding-top: 10px; border-top: 5px solid black;">
     <div
       class="alert"
       ng-class="{'alert-danger': !spec.passed, 'alert-success': spec.passed}">
       <strong>{{spec.fullName}}</strong>. {{spec.message}}
-      <div class="pull-right">
-        <label><input type="checkbox" ng-model="spec.passed"> Not an issue</label>
-      </div>
+      <!--<div class="pull-right">-->
+        <!--<label><input type="checkbox" ng-model="spec.passed"> Not an issue</label>-->
+      <!--</div>-->
     </div>
     <a href="{{spec.id}}.png" data-lightbox="{{spec.id}}">
       <img ng-src="{{spec.id}}.png" width="100%">
     </a>
   </div>
 
-  <div ng-if="failedSpecs.length === 0">
+  <div ng-if="getSpecs().length === 0">
     <div style="font-size: 3em;"
          class="text-center">Awesome :)
     </div>
